@@ -69,6 +69,7 @@ Trunk (unreleased changes)
     HADOOP-1996 TestHStoreFile fails on windows if run multiple times
     HADOOP-1937 When the master times out a region server's lease, it is too 
                 aggressive in reclaiming the server's log.
+    HADOOP-2004 webapp hql formatting bugs 
 
   IMPROVEMENTS
     HADOOP-1737 Make HColumnDescriptor data publically members settable
